<resources>
    <!-- main -->
    <string name="app_name">Mini Batalla Naval</string>
    <string name="main_titulo">Mini Batalla Naval</string>
    <string name="main_ingresarNombre">Ingrese nombre</string>
    <string name="main_ingresarDificultad">Seleccione dificultad</string>
    <string name="main_hintNombre">Mario Misiles</string>
    <string name="main_jugar">¡Jugar!</string>
    <string name="main_btn_help">Botón de ayuda</string>
    <string name="main_menu_popup_inicio">🏆 Ranking</string>
    <string name="input_error_empty">Por favor ingrese un nombre</string>
    <string-array name="opciones_dificultad_array">
        <item>6 x 6</item>
        <item>8 x 8</item>
        <item>10 x 10</item>
    </string-array>

    <!-- game -->
    <string name="nombre_jugador">⚓ Capitán %1$s</string>
    <string name="game_btn_reiniciar">🔄 Reiniciar</string>
    <string name="game_btn_menu">Menú de opciones</string>
    <string name="updater_restantes">Barcos restantes: %1$d</string>
    <string name="updater_movimientos">Movimientos: %1$d</string>
    <string name="updater_aciertos">Aciertos: %1$d</string>
    <string name="updater_tocado">¡Tocado!</string>
    <string name="updater_agua">¡Agua!</string>
    <string name="emoji_barco" translatable="false">🛳</string>
    <string name="emoji_agua" translatable="false">🌊</string>
    <string name="game_menu_popup_inicio">🏠 Inicio</string>
    <string name="game_menu_popup_help">ℹ️ Información del juego</string>

    <!-- game timer -->
    <string name="timer_segundos_restantes">Tiempo ⏱ %1$d segundos</string>

    <!-- game dialog -->
    <string name="dialog_title_victory">🎉 ¡Ganaste!</string>
    <string name="dialog_message_victory_no_ranking">Encontraste todos los barcos a tiempo, pero no entraste al Top 5</string>
    <string name="dialog_message_victory_ranking">¡Encontraste todos los barcos a tiempo y accediste al ranking!</string>
    <string name="dialog_button_try_again">¡Intentar de nuevo!</string>
    <string name="dialog_button_play_again">¡Jugar de nuevo!</string>
    <string name="dialog_button_go_home_screen">¡Ir al inicio!</string>
    <string name="dialog_button_view_ranking">¡Ver ranking!</string>
    <string name="dialog_button_share">¡Compartir!</string>

    <string name="dialog_title_defeat">⏱ Tiempo agotado</string>
    <string name="dialog_message_defeat">No lograste encontrar todos los barcos a tiempo</string>
    <string name="dialog_button_go_home_defeat">Volver a Inicio</string>

    <string name="share_score_text_template">🚢 Mini Batalla Naval\n🎉 ¡Capitán %1$s ganó!\n✅ Aciertos: %2$d\n🔁 Movimientos: %3$d\n📐 Tablero: %4$dx%5$d</string>
    <string name="share_score_chooser_title">Compartir puntaje vía</string>


    <!-- help -->
    <string name="help_title">¡Bienvenid@ a Mini Batalla Naval!</string>
    <string name="help_introduction_header">¿List@ para mojarte un poco?</string>
    <string name="help_introduction_text">Esta es la versión individual del clásico Batalla Naval</string>
    <string name="help_objective_header">🎯 Tu Objetivo</string>
    <string name="help_objective_text">Descubre la ubicación de todos los barcos enemigos en la menor cantidad de movimientos. ¡Cada jugada es crucial para alcanzar la victoria y batir tu propio récord!</string>
    <string name="help_how_to_play_header">💧 ¿Cómo Jugar?</string>
    <string name="help_how_to_play_text">
        1. <b>Elige tu Desafío:</b>\n
            Comienza seleccionando una dificultad: 6x6, 8x8 o 10x10. Estas definen el tamaño del tablero y el número de barcos.\n
        2. <b>Explora el Océano:</b>\n
            ¡Si no es barco te mojas!.\n
        3. <b>Reporte de Batalla:</b>\n
           • <font color='#FF9800'><b>¡TOCADO!</b></font> (🛳): ¡Has encontrado un barco! Sigue explorando las casillas.\n
           • <font color='#03A9F4'><b>¡AGUA!</b></font> (🌊): Solo había mar. ¡Ajustá la mira y seguí intentando!\n
    </string>
    <string name="help_winning_header">🏆 ¡Victoria y Gloria! 🎉🤘</string>
    <string name="help_winning_text">La partida finaliza cuando todos los barcos enemigos hayan sido descubiertos. ¡Celebrá el triunfo y esforzate por mejorar tu puntuación en cada partida!</string>
    <string name="help_good_luck">¡Que los vientos te sean favorables, Capitán!</string>
    <string name="button_back">🔙 Volver</string>

    <!-- leaderboard -->
    <string name="leaderboard_title">🏆 Top 5 capitanes 🏆</string>
    <string name="leaderboard_text_template">%1$d. ⚓ %2$s: %3$d aciertos/ %4$d movimientos</string>
    <string name="leaderboard_emojis" translatable="false">🤯😎🥳</string>
    <string name="button_back_to_home">🔙 Volver a inicio</string>

</resources>