<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainHelpLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".HelpActivity">

    <TextView
        android:id="@+id/tvHelpTitle"
        style="@style/estilo_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/help_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollViewExplanation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnHelpBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHelpTitle"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/tvHelpIntroHeader"
                style="@style/estilo_subtitulo_ayuda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_introduction_header"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvHelpIntroText"
                style="@style/estilo_texto_normal_ayuda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_introduction_text"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/tvHelpObjectiveHeader"
                style="@style/estilo_subtitulo_ayuda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_objective_header"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/tvHelpObjectiveText"
                style="@style/estilo_texto_normal_ayuda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_objective_text"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/tvHelpHowToPlayHeader"
                style="@style/estilo_subtitulo_ayuda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_how_to_play_header"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/tvHelpHowToPlayText"
                style="@style/estilo_texto_normal_ayuda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_how_to_play_text"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/tvHelpWinningHeader"
                style="@style/estilo_subtitulo_ayuda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_winning_header"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/tvHelpWinningText"
                style="@style/estilo_texto_normal_ayuda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_winning_text"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/tvHelpGoodLuck"
                style="@style/estilo_texto_normal_ayuda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_good_luck"
                android:textAlignment="center"
                android:textStyle="italic"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnHelpBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/help_button_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>